[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PixelFont/PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Pickups/Coin Frames/0.png" type="Texture" id=3]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Coin_Counter" type="Label" parent="."]
margin_left = 3.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 37.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.917969, 0.895221, 0.709991, 1 )
text = "0"

[node name="Coin" type="TextureRect" parent="."]
margin_left = 12.0
margin_top = 5.0
margin_right = 18.0
margin_bottom = 11.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )
stretch_mode = 3

[node name="Distance_Traveled" type="Label" parent="."]
margin_left = 50.0
margin_top = 1.0
margin_right = 68.0
margin_bottom = 37.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="KM" type="Label" parent="."]
margin_left = 60.0
margin_top = 1.0
margin_right = 106.0
margin_bottom = 37.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
text = "KM"

[node name="Best_Distance_Traveled" type="Label" parent="."]
margin_left = 50.0556
margin_top = 13.5516
margin_right = 90.0556
margin_bottom = 27.5516
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.615686, 0.376471, 0.34902, 1 )
text = "KM Best"

